--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ html2text>=2020.1.16
 Jinja2>=3.1.2
 urllib3>=1.26.15
 pyyaml>=6.0
+weasyprint>=60.0
 
 # AI and ML dependencies
 scikit-learn>=1.2.2
